# fastapp

./: pyproject.toml  requirements.txt
